--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <section id="gallerie" class="gallerie">
         <div class="title  title-gallerie">
-            <h2>Gallerie</h2>
+            <h2>Galerie</h2>
             <span class="line-title"></span>
         </div>
         <div class="gallerie-content">
@@ -157,7 +157,7 @@
     <footer>
         <div>
             <a href="./index.html">Film</a>
-            <a href="./index.html#gallerie">Gallerie</a>
+            <a href="./index.html#gallerie">Galerie</a>
             <a href="./quizz.html">Quizz</a>
             <a href="./shop.html">Shop</a>
         </div>
