--- a/quizz.html
+++ b/quizz.html
@@ -70,7 +70,7 @@
     <footer>
         <div>
             <a href="./index.html">Film</a>
-            <a href="./index.html#gallerie">Gallerie</a>
+            <a href="./index.html#gallerie">Galerie</a>
             <a href="./quizz.html">Quizz</a>
             <a href="./shop.html">Shop</a>
         </div>
