--- a/shop.html
+++ b/shop.html
@@ -72,7 +72,7 @@
                 <h3>Casquette</h3>
                 <p>
                     Une jolie casquette blanche
-                    à portée sans modération !
+                    à porter sans modération !
                 </p>
                 <div class="button-shop">Acheter</div>
             </div>
