--- a/quizz.html
+++ b/quizz.html
@@ -13,7 +13,7 @@
             <div class="menu-social">
                 <a href="https://www.facebook.com/inspecteurmarron"><i class="fab fa-facebook-square"></i></a>
                 <a href="https://www.instagram.com/inspecteur_marron/?hl=fr"><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-youtube"></i></a>
+                <a href="https://www.youtube.com/channel/UCGtyndpGlBNHGeZdEeOLehg"><i class="fab fa-youtube"></i></a>
             </div>
             <div class="scroll">
                 <p>Scroll</p>
@@ -41,7 +41,7 @@
                     <div>
                         <a href="https://www.facebook.com/inspecteurmarron"><i class="fab fa-facebook-square" style="margin: 10px;"></i></a>
                         <a href="https://www.instagram.com/inspecteur_marron/?hl=fr"><i class="fab fa-instagram" style="margin: 10px;"></i></a>
-                        <a href=""><i class="fab fa-youtube" style="margin: 10px;"></i></a>
+                        <a href="https://www.youtube.com/channel/UCGtyndpGlBNHGeZdEeOLehg"><i class="fab fa-youtube" style="margin: 10px;"></i></a>
                     </div>
                 </div>
             </div>
